--- a/aula_python.ipynb
+++ b/aula_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzHhfyVxYgJECalou6XPl0",
+      "authorship_tag": "ABX9TyMNJd1yEGrrY4oXk9VPnovg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,13 +48,55 @@
         "id": "uUBh0fUvpc6A",
         "outputId": "446e3867-ddf3-452c-c5c0-29cc2bef3b8d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "IX competição de programação da Start\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**aula** 2  🎱 🤠 🐴"
+      ],
+      "metadata": {
+        "id": "S_0vXphppMbg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "livro_ficcao = 8\n",
+        "livro_n_ficcao = 10\n",
+        "livro_infantil = 6\n",
+        "pontos_ana = 2 * livro_ficcao + 5 * livro_infantil\n",
+        "pontos_rodrigo = livro_ficcao + livro_n_ficcao + livro_infantil\n",
+        "pontos_totais = pontos_rodrigo + pontos_ana\n",
+        "print(f\"Os pontos totais do Rodrigo são {pontos_rodrigo}\")\n",
+        "print(f\"os totais do rodrigo e da ana são{pontos_ana}\")\n",
+        "print(f\"os pontos totais de rodrigo e ana são {pontos_totais}\")"
+      ],
+      "metadata": {
+        "id": "t0Qy4ToNqE1U",
+        "outputId": "ce3b21c6-bf96-49b8-8671-e3c0529f248a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Os pontos totais do Rodrigo são 24\n",
+            "os totais do rodrigo e da ana são46\n",
+            "os pontos totais de rodrigo e ana são 70\n"
           ]
         }
       ]
