--- a/aula_python.ipynb
+++ b/aula_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNJd1yEGrrY4oXk9VPnovg",
+      "authorship_tag": "ABX9TyNjX8ST0TNrXR9NKVylzCWx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,11 +82,11 @@
         "print(f\"os pontos totais de rodrigo e ana são {pontos_totais}\")"
       ],
       "metadata": {
-        "id": "t0Qy4ToNqE1U",
-        "outputId": "ce3b21c6-bf96-49b8-8671-e3c0529f248a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "t0Qy4ToNqE1U",
+        "outputId": "ce3b21c6-bf96-49b8-8671-e3c0529f248a"
       },
       "execution_count": 4,
       "outputs": [
@@ -97,6 +97,52 @@
             "Os pontos totais do Rodrigo são 24\n",
             "os totais do rodrigo e da ana são46\n",
             "os pontos totais de rodrigo e ana são 70\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**aula** 3  tabuada ⏰ ⚫  ✅"
+      ],
+      "metadata": {
+        "id": "vq7Rz__ysPPf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def tabuada(numero):\n",
+        "    for contador in range(1, 11):  # Gera números de 1 a 10\n",
+        "        print(f\"{numero} x {contador} = {numero * contador}\")\n",
+        "numero = int(input(\"Digite um número para ver sua tabuada: \"))\n",
+        "tabuada(numero)\n"
+      ],
+      "metadata": {
+        "id": "yLI4PNeWsaft",
+        "outputId": "f4fdfa1d-658e-490e-b0b9-1107e455b912",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número para ver sua tabuada: 6\n",
+            "6 x 1 = 6\n",
+            "6 x 2 = 12\n",
+            "6 x 3 = 18\n",
+            "6 x 4 = 24\n",
+            "6 x 5 = 30\n",
+            "6 x 6 = 36\n",
+            "6 x 7 = 42\n",
+            "6 x 8 = 48\n",
+            "6 x 9 = 54\n",
+            "6 x 10 = 60\n"
           ]
         }
       ]
