--- a/aula_python.ipynb
+++ b/aula_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjX8ST0TNrXR9NKVylzCWx",
+      "authorship_tag": "ABX9TyMiEP+FYn1O+7skXadQQ0UM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,7 +88,7 @@
         "id": "t0Qy4ToNqE1U",
         "outputId": "ce3b21c6-bf96-49b8-8671-e3c0529f248a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +126,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,6 +143,66 @@
             "6 x 8 = 48\n",
             "6 x 9 = 54\n",
             "6 x 10 = 60\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**aula**4 imc: ⏰ * ◀"
+      ],
+      "metadata": {
+        "id": "qbnVL-0nkGbz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VxUzWyOskcJ7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**aula** 5"
+      ],
+      "metadata": {
+        "id": "TJgCUHEjksvg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "lZsWi42mmGcd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"olá, sou seu assistente virtual, em que posso ajudar ?\")\n",
+        "nome = input(\"digite seu nome:\")\n",
+        "resposta = input(f\"olá {nome},qual tema voce deseja comversar?pyth, javascriptou matematica\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "1pj-c63QkxTH",
+        "outputId": "4f4ee646-685b-413d-c291-b0af837a0019",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "olá, sou seu assistente virtual, em que posso ajudar ?\n"
           ]
         }
       ]
