--- a/aula_python.ipynb
+++ b/aula_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiEP+FYn1O+7skXadQQ0UM",
+      "authorship_tag": "ABX9TyO7elet75PFv2B1ubPt5T+M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -186,23 +186,32 @@
       "source": [
         "print(\"olá, sou seu assistente virtual, em que posso ajudar ?\")\n",
         "nome = input(\"digite seu nome:\")\n",
-        "resposta = input(f\"olá {nome},qual tema voce deseja comversar?pyth, javascriptou matematica\")\n",
-        "\n"
+        "resposta = input(f\"olá {nome},qual tema voce deseja comversar?pyth, javascriptou matematica: \")\n",
+        "if resposta ==\"pyhton\":\n",
+        "  print(f\"otimo{nome}, vamos falar sobre python. \\n\")\n",
+        "if resposta ==\"pyhton\":\n",
+        "  print(f\"otimo{nome}, vamos falar sobre python.\")\n",
+        "if resposta ==\"pyhton\":\n",
+        "  print(f\"otimo{nome}, vamos falar sobre python.\")\n",
+        "else:\n",
+        "   print(f\"que pena {nome}, nao sei fala sobre esse assunto.\")"
       ],
       "metadata": {
-        "id": "1pj-c63QkxTH",
-        "outputId": "4f4ee646-685b-413d-c291-b0af837a0019",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1pj-c63QkxTH",
+        "outputId": "18e76697-492f-4b79-e19e-047c04851209"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "olá, sou seu assistente virtual, em que posso ajudar ?\n"
+            "olá, sou seu assistente virtual, em que posso ajudar ?\n",
+            "digite seu nome:gustavo\n",
+            "olá gustavo,qual tema voce deseja comversar?pyth, javascriptou matematica: matematica\n"
           ]
         }
       ]
