--- a/aula_python.ipynb
+++ b/aula_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7elet75PFv2B1ubPt5T+M",
+      "authorship_tag": "ABX9TyPAm4YD3JT2m8v2EYBrlnIW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -215,6 +215,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**aula** 6 ⏬ 🚫 💪"
+      ],
+      "metadata": {
+        "id": "LiuCWdrCyRiq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "eld3x4QUy_DT"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
