--- a/aula_python.ipynb
+++ b/aula_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAm4YD3JT2m8v2EYBrlnIW",
+      "authorship_tag": "ABX9TyOQblLbdiQlVP6yI4h/pGRB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -203,7 +203,7 @@
         "id": "1pj-c63QkxTH",
         "outputId": "18e76697-492f-4b79-e19e-047c04851209"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -227,7 +227,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Inport random\n",
+        "dicas = [Acredite no seu potencial e vá além! 🌟\n",
+        "\n",
+        "\n",
+        "\"Cada passo, por menor que seja, te aproxima do seu objetivo. 🚶,\"\n",
+        "\"Você é mais forte do que imagina. 💪,\"\n",
+        "\"O segredo do sucesso é começar. 🚀,\"\n",
+        "\"Transforme desafios em oportunidades. 🔄,\"\n",
+        "\"Nunca desista do que faz seu coração vibrar. ❤️,\"\n",
+        "\"Foque no progresso, não na perfeição. 🎯,\"\n",
+        "\"A persistência constrói resultados. 🧱,\"\n",
+        "\"Sonhe grande e lute por isso. ✨,\"\n",
+        "\"Sua jornada é única — valorize cada momento. 🌈,\"\n",
+        "]\n",
+        "while True:\n",
+        "  pedido = input(\"Digite 'dica' para receber uma dica ou 'sair' para encerrar \\n \").lower()\n",
+        "\n",
+        "  if pedido == \"dica\":\n",
+        "    dica = random.choice(dicas) # escolhe uma dica aleatória sair\n",
+        "    print(f\"Dica: {dica} \\n\")\n",
+        "    break\n",
+        "  elif pedido == \"sair\":\n",
+        "    print(\"Até a próxima! \\n\")\n",
+        "    break\n",
+        "  else:\n",
+        "    print(\"Comando inválido. Tente novamente. \\n\")\n",
+        "    break"
+      ],
       "metadata": {
         "id": "eld3x4QUy_DT"
       },
