--- a/aula_python.ipynb
+++ b/aula_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOQblLbdiQlVP6yI4h/pGRB",
+      "authorship_tag": "ABX9TyNpiXlHDQnm6F1xY6/OnPIV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -248,7 +248,7 @@
         "  if pedido == \"dica\":\n",
         "    dica = random.choice(dicas) # escolhe uma dica aleatória sair\n",
         "    print(f\"Dica: {dica} \\n\")\n",
-        "    break\n",
+        "\n",
         "  elif pedido == \"sair\":\n",
         "    print(\"Até a próxima! \\n\")\n",
         "    break\n",
@@ -257,10 +257,24 @@
         "    break"
       ],
       "metadata": {
-        "id": "eld3x4QUy_DT"
+        "id": "eld3x4QUy_DT",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "outputId": "d77ab7c9-040d-45b1-b04d-b7790f3a091e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid character '🌟' (U+1F31F) (ipython-input-2874387811.py, line 2)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-2874387811.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    dicas = [Acredite no seu potencial e vá além! 🌟\u001b[0m\n\u001b[0m                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character '🌟' (U+1F31F)\n"
+          ]
+        }
+      ]
     }
   ]
 }
